// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render "No Expenses" without expenses 1`] = `
<div>
  <div
    className="content-container"
  >
    <div
      className="list__header"
    >
      <div
        className="show-for-mobile"
      >
        Expenses
      </div>
      <div
        className="show-for-desktop"
      >
        Expense
      </div>
      <div
        className="show-for-desktop"
      >
        Amount
      </div>
    </div>
    <div
      className="list__item--empty"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div>
  <[object Object] />
  <div
    className="content-container"
  >
    <div
      className="list__header"
    >
      <div
        className="show-for-mobile"
      >
        Expenses
      </div>
      <div
        className="show-for-desktop"
      >
        Expense
      </div>
      <div
        className="show-for-desktop"
      >
        Amount
      </div>
    </div>
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      notes=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      notes=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={432000000}
      description="Credit Card"
      id="3"
      key="3"
      notes=""
    />
  </div>
</div>
`;
